<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/turnOnGps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginLeft="80dp"

        android:width="@dimen/button_width_text"
        android:background="@drawable/button_border"
        android:onClick="turnOnGps"
        android:text="@string/turnOnGps_text"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/button_textsize" />

    <Button
        android:id="@+id/turnOffGps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginRight="80dp"
        android:width="@dimen/button_width_text"
        android:background="@drawable/button_border"
        android:onClick="turnOffGps"
        android:text="@string/turnOffGps_text"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/button_textsize" />

    <Button
        android:id="@+id/permission_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"

        android:layout_margin="30dp"
        android:width="@dimen/button_width_text"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:onClick="grantPermission"
        android:text="@string/permission_text"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/button_textsize" />

    <Button
        android:id="@+id/startRoute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        android:width="10dp"
        android:background="@drawable/button_border"
        android:onClick="startRoute"
        android:text="@string/startRoute_text"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/button_textsize" />


    <Button
        android:id="@+id/finishRoute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginRight="80dp"
        android:width="10dp"
        android:background="@drawable/button_border"
        android:onClick="finishRoute"
        android:text="@string/finishRoute_text"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/button_textsize" />

    <TextView
        android:id="@+id/travelledDistLabel_textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textHeight"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:width="110sp"
        android:background="@color/colorAccent"
        android:text="@string/travelledDistance_text"
        android:textAlignment="center"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/travelledDistance_textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textHeight"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center"

        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:width="110sp"
        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:textColor="@color/text_withBackground" />


    <Chronometer
        android:id="@+id/route_chronometer"

        android:layout_height="@dimen/textHeight"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:width="110sp"
        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:textColor="@color/text_withBackground" />

    <TextView
        android:id="@+id/pastTimeLabel_texView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textHeight"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:width="110sp"
        android:background="@color/colorAccent"
        android:text="@string/pastTimeLabel_textview"
        android:textAlignment="center"
        android:textColor="@color/text_withBackground"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/search_textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textHeight"
        android:layout_row="5"
        android:layout_column="0"

        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search_textView"
        android:textColor="@color/text_color" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"


        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        app:fabSize="auto"
        app:srcCompat="@android:drawable/ic_menu_search" />

</GridLayout>